03-Nov-2013 Added Mingw-4.8.1

02-Nov-2013 Release 0.50 Alpha 6

02-Nov-2013 Removed Opus.Core.File. Use Opus.Core.Location or FileLocation as a replacement.

02-Nov-2013 Removed deprecated Opus.Core.Exception(string,System.Exception)

01-Nov-2013 Added Qt-4.8.5 package.

31-Oct-2013 Reworked the Opus.Core.Location API and usage. Location is an abstract base class. FileLocation is a subclass, and represents a single file. DirectoryLocation is a subclass, and represents a single directory. ScaffoldLocation is a subclass, and represents an ambiguous number of files or directories. Calling GetLocations() on a ScaffoldLocation returns a resolved list of Locations. Many File and Directory storage cases have been revised to use Locations, and some APIs have been broken in the process. Particularly, the Include/Exclude mechanism now only accepts a single pattern string, rather than a variable length array of subpaths.

31-Oct-2013 Added Opus.Core.Array<T>.SubArray, taking the index of the first element, and a count.

23-Oct-2013 Release 0.50 Alpha 5

22-Oct-2013 Added an action to XcodeBuilder, -warmschemecaches, that will warm the per-project cache of Xcode schemes, enabling the use of the commandline tool 'xcodebuild' to be used on a workspace, without having to load it into the Xcode UI. This action is disabled by default. It is useful for automated testing.

09-Oct-2013 Modified OpusOptionCodeGenerator so that option property gets are now aware of the super set option collections.

09-Oct-2013 Extending Opus.Core.BaseOptionCollection so delta option collections are aware of their super set option collections. This is essential for being able to reference any valid option in the delegates, without fear of it not being in a delta.

08-Oct-2013 Added SuppressReadOnlyRelocations to C.ILinkerOptionsOSX.

08-Oct-2013 Split C.ILinkerOptions into platform independent settings, and C.ILinkerOptionsOSX for OSX specific options (e.g. frameworks, etc).
