@@ -1,3 +1,5 @@
+04-Nov-2013 Added new C OutputFileFlags, OSXBundle, OSXBundleContents and OSXBundleMacOS, for OSX application bundle builds, referring to the .app, .app/Contents, and .app/Contents/MacOS folders, respectively.
+
 03-Nov-2013 Added Mingw-4.8.1
 
 02-Nov-2013 Release 0.50 Alpha 6
